--- a/VirtualStore/Views/Home/Employees.cshtml
+++ b/VirtualStore/Views/Home/Employees.cshtml
@@ -11,6 +11,9 @@
     <title>Employees</title>
 </head>
 <body>
+
+    <h3>Семья</h3>
+
     <table>
         <thead>
             <tr>
@@ -24,13 +27,21 @@
             @foreach(var employee in Model)
             {
                 <tr>
-                    <th>@employee.Id</th>
-                    <th>@employee.Name</th>
-                    <th>@employee.SecondName</th>
-                    <th>@employee.Age</th>
+                    <td>@employee.Id</td>
+                    <td>@employee.Name</td>
+                    <td>@employee.SecondName</td>
+                    <td>@employee.Age</td>
+                    <td>
+                        <a href="~/">Инфо</a>
+                    </td>
                 </tr>                
             }
         </tbody>
     </table>
+
+    <hr/>
+
+    <a href="~/">На главную</a>
+
 </body>
 </html>
