--- a/VirtualStore/Views/Home/Index.cshtml
+++ b/VirtualStore/Views/Home/Index.cshtml
@@ -11,6 +11,7 @@
         <h3>Заголовок</h3>
         <p>Привет из HomeControllera!</p>
 
+        <a href="/home/employees">Список семьи</a>
 
     </body>
 
