--- a/VirtualStore/Views/_ViewImports.cshtml
+++ b/VirtualStore/Views/_ViewImports.cshtml
@@ -1,1 +1,5 @@
-﻿
+﻿@using VirtualStore
+@using VirtualStore.Models
+
+@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, VirtualStore
