--- a/VirtualStore/Views/Employees/Index.cshtml
+++ b/VirtualStore/Views/Employees/Index.cshtml
@@ -1,20 +1,9 @@
 ﻿@model IEnumerable<VirtualStore.Models.Employee>
-@{
-    Layout = null;
-}
 
-<!DOCTYPE html>
-
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>Employees</title>
-</head>
-<body>
-
+<div class="container">
     <h3>Семья</h3>
 
-    <table>
+    <table class="table">
         <thead>
             <tr>
                 <th>Id</th>
@@ -24,7 +13,7 @@
             </tr>
         </thead>
         <tbody>
-            @foreach(var employee in Model)
+            @foreach (var employee in Model)
             {
                 <tr>
                     <td>@employee.Id</td>
@@ -34,14 +23,11 @@
                     <td>
                         <a href="~/">Инфо</a>
                     </td>
-                </tr>                
+                </tr>
             }
         </tbody>
     </table>
 
-    <hr/>
-
-    <a href="~/">На главную</a>
-
-</body>
-</html>
+    <hr />
+    <a asp-controller="Home" asp-action="Index">На главную</a>
+</div>
