--- a/VirtualStore/Views/Shared/Partial/_MainMenu.cshtml
+++ b/VirtualStore/Views/Shared/Partial/_MainMenu.cshtml
@@ -18,7 +18,7 @@
                 <li><a asp-controller="Blogs" asp-action="Blog">Blog Single</a></li>
             </ul>
         </li>
-        <li><a href="404.html">404</a></li>
+        <li><a asp-controller="Home" asp-action="Error">404</a></li>
         <li><a href="contact-us.html">Contact</a></li>
         <li><a asp-controller="Employees" asp-action="Index" >Сотрудники</a></li>
 
