add: контроллер и представление ContactUs

--- a/VirtualStore/Views/Shared/Partial/_MainMenu.cshtml
+++ b/VirtualStore/Views/Shared/Partial/_MainMenu.cshtml
@@ -19,7 +19,7 @@
             </ul>
         </li>
         <li><a asp-controller="Home" asp-action="Error">404</a></li>
-        <li><a href="contact-us.html">Contact</a></li>
+        <li><a asp-controller="Home" asp-action="ContactUs">Contact</a></li>
         <li><a asp-controller="Employees" asp-action="Index" >Сотрудники</a></li>
 
     </ul>
